welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:13: error: '=' expected but ';' found.
    goAndGet();
^